--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.21.0",
+    "bootstrap": "^4.5.3",
     "concurrently": "^5.3.0",
     "express": "^4.17.1",
+    "react-bootstrap": "^1.4.0",
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
