--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
     "concurrently": "^5.3.0",
