--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "concurrently": "^5.3.0",
     "express": "^4.17.1",
     "react-bootstrap": "^1.4.0",
+    "react-icons": "^3.11.0",
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
