--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "license": "MIT",
   "dependencies": {
     "@material-ui/core": "^4.11.0",
+    "aos": "^2.3.4",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
     "concurrently": "^5.3.0",
     "express": "^4.17.1",
+    "i": "^0.3.6",
     "react-bootstrap": "^1.4.0",
     "react-icon-base": "^2.1.2",
     "react-icons": "^3.11.0",
